--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,8 @@ body {
 }
 
 .topBarButton {
-  margin-top: 15px;
+  line-height: 60px;
+  vertical-align: middle;
   border-radius: 3px;
   background-color: transparent;
   margin-right: 25px;
@@ -50,16 +51,18 @@ body {
   color: #1DBB9B;
 }
 
-.register {
+.register, .register:hover {
   background-color: #1DBB9B;
   border-color: transparent;
   color:white;
+  text-decoration: none;
 }
 
 .logIn:hover {
   background-color: #1DBB9B;
   border-color: transparent;
   color:white;
+  text-decoration: none;
 }
 
 .header {
@@ -86,4 +89,48 @@ body {
 
 .homeLoading {
   margin-top: 160px;
+}
+
+.loginPanel {
+  width: 500px;
+}
+
+.btn.logInButton {
+  background-color:#1DBB9B;
+  color:white;
+}
+
+.loginPanelHeader {
+  margin-top: 20px;
+}
+
+.profileItem, .profileItem1 {
+  margin-left: 2px;
+}
+
+.profileItem1 {
+  margin-bottom: 10px;
+}
+
+.well {
+  margin-bottom: 0;
+}
+
+.auctionImg {
+  max-width:200px;
+  max-height: 150px;
+}
+
+.auctionPanelContent {
+  margin-top: 5px;
+  padding-left: 1.5px;
+}
+
+.highestBidLabel {
+  margin-top: 5px;
+  font-size: 110%;
+}
+
+.openDetails {
+  margin-top: 15px;
 }
