--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,6 +119,8 @@ body {
 .auctionImg {
   min-width:200px;
   min-height: 150px;
+  position: relative;
+  left: -10px;
 }
 
 .auctionPanelContent {
